# repo-metrics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  settings.yaml.example  setup.cfg  setup.py
scripts/: gh_metrics.py
utils/: file_io.py  github_client.py  metrics_calculators.py
utils/GQL_Queries/: contributors_query.py  github_wrappers.py  pr_query.py  result_wrappers.py  review_teams_query.py
