[metadata]
name = 'qe-pr-metrics'
description = 'tool for collecting metrics on PRs'
author = 'Mike Shriver'
author_email = 'mshriver@redhat.com'
url='https://gitlab.cee.redhat.com/mshriver/qe-pr-metrics'

[options]
zip_safe = False
include_pacakge_data = True
packages = find:
entry_points = file:entry_points.txt
setup_requires = setuptools_scm>=3.0.0
install_requires = 
	PyGithub
	dynaconf>=3.0


