[metadata]
name = qe-pr-metrics
description = 'tool for collecting metrics on PRs'
long-description = file: README.md
long-description-content-type: text/markdown
author = 'Mike Shriver'
author-email = 'mshriver@redhat.com'
url='https://gitlab.cee.redhat.com/mshriver/qe-pr-metrics'

[options]
packages = find:
setup_requires = setuptools_scm>=3.0.0
install_requires =
	attrs
	attrdict
	cached-property
	click
	dynaconf>=3.0
    PyGithub
	tabulate

[options.extras_require]
dev =
	pre-commit
	ipython

[options.entry_points]
console_scripts =
	github-metrics = scripts.gh_metrics:gather
