[metadata]
name = qe-pr-metrics
description = 'tool for collecting metrics on PRs'
long-description = file: README.md
long-description-content-type: text/markdown
author = 'Mike Shriver'
author-email = 'mshriver@redhat.com'
url='https://gitlab.cee.redhat.com/mshriver/qe-pr-metrics'

[options]
python_requires = >=3.8
packages = find:
setup_requires = setuptools_scm>=3.0.0
install_requires =
	attrs
    python-box
	cached-property
	click
	dynaconf
	gql>=3.0.0rc0
    logzero
	PyGithub
    python-dateutil
	requests
    requests-toolbelt  # gql 3.0 http transport
	tabulate

[options.extras_require]
dev =
	pre-commit
	ipython

[options.entry_points]
console_scripts =
	github-metrics = scripts.gh_metrics:report
